...
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@string/statistics_chart"
                            android:textAppearance="?attr/textAppearanceBody1" />

                        <com.google.android.material.button.MaterialButtonToggleGroup
                            android:id="@+id/chart_type_toggle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            app:singleSelection="true">

                            <Button
                                android:id="@+id/button_pie_chart"
...
